--- a/T3/JavaScript/introducao-javascript/index.html
+++ b/T3/JavaScript/introducao-javascript/index.html
@@ -59,6 +59,7 @@
 							<td class="info-gordura">24</td>
 							<td class="info-imc">0</td>
 						</tr>
+
 						<tr class="paciente" >
 							<td class="info-nome">Tatiana</td>
 							<td class="info-peso">46</td>
@@ -74,6 +75,7 @@
 
 		<section class="container">
     <h2 id="titulo-form">Adicionar novo paciente</h2>
+		<ul id="mensagens-erro"></ul>
     <form id="form-adiciona">
         <div class="grupo">
             <label for="nome">Nome:</label>
@@ -98,6 +100,7 @@
 
 		<script src="js/calcula-imc.js"></script>
 		<script src="js/form.js"></script>
-
+		<script src="js/remove-paciente.js"></script>
+		
 	</body>
 </html>
