--- a/T3/JavaScript/introducao-javascript/index.html
+++ b/T3/JavaScript/introducao-javascript/index.html
@@ -17,6 +17,8 @@
 		<main>
 			<section class="container">
 				<h2>Meus pacientes</h2>
+				<label for="filtrar-tabela">Filtro:</label>
+				<input type="text" name="filtro" id="filtrar-tabela" placeholder="Digite o nome do paciente.">
 				<table>
 					<thead>
 						<tr>
@@ -70,6 +72,9 @@
 					</tbody>
 				</table>
 
+				<span id="erro-ajax" class="invisivel">Erro ao buscar os pacientes</span>
+				<button id="buscar-pacientes" class="botao bto-principal">Buscar Pacientes</button>
+
 			</section>
 		</main>
 
@@ -101,6 +106,10 @@
 		<script src="js/calcula-imc.js"></script>
 		<script src="js/form.js"></script>
 		<script src="js/remove-paciente.js"></script>
-		
+		<script src="js/filtra.js"></script>
+		<script src="js/buscar-pacientes.js"></script>
+
+
+
 	</body>
 </html>
