JQuery - Estilizando o Jogo

--- a/T3/JQuery/alura-typer/public/principal.html
+++ b/T3/JQuery/alura-typer/public/principal.html
@@ -9,8 +9,16 @@
     <p class="frase">Este texto possui oito belas e grandiosas palavras</p>
 
     <ul class="informacoes">
-        <li><span id="tamanho-frase">5</span> palavras</li>
-        <li>5 segundos</li>
+        <li><span id="tamanho-frase">0</span> Palavras</li>
+        <li><span id="tempo-digitacao">5</span> Segundos</li>
+    </ul>
+
+    <textarea class="campo-digitacao" rows="8" cols="80"></textarea>
+    <button id="botao-reiniciar">Reiniciar Jogo</button>
+
+    <ul>
+      <li><span id="contador-caracteres">0</span> Caracteres</li>
+      <li><span id="contador-palavras">0</span> Palavras</li>
     </ul>
 
     <script src="js/jquery.js"></script>
