--- a/T3/JQuery/alura-typer/public/principal.html
+++ b/T3/JQuery/alura-typer/public/principal.html
@@ -3,26 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <title>Alura Typer</title>
+    <link rel="stylesheet" href="css/libs/materialize.min.css">
+    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="css/libs/google-fonts.css">
 </head>
 <body>
-    <h1>Alura Typer</h1>
-    <p class="frase">Este texto possui oito belas e grandiosas palavras</p>
+  <div class="container">
+    <h1 class="center">Alura Typer</h1>
+    <p class="frase">Este texto possui oito belas e grandiosas palavras.</p>
 
-    <ul class="informacoes">
-        <li><span id="tamanho-frase">0</span> Palavras</li>
-        <li><span id="tempo-digitacao">5</span> Segundos</li>
+    <ul class="informacoes center">
+        <li>
+          <i class="small material-icons icones">description</i>
+          <span id="tamanho-frase">0</span> Palavras
+        </li>
+        <li>
+          <i class="small material-icons icones">query_builder</i>
+          <span id="tempo-digitacao">5</span> Segundos
+        </li>
     </ul>
 
     <textarea class="campo-digitacao" rows="8" cols="80"></textarea>
-    <button id="botao-reiniciar">Reiniciar Jogo</button>
 
-    <ul>
+    <a id="botao-reiniciar" class="btn-floating btn-large waves-effect waves-light red">
+      <i class="material-icons">restore</i>
+    </a>
+
+    <ul class="center">
       <li><span id="contador-caracteres">0</span> Caracteres</li>
       <li><span id="contador-palavras">0</span> Palavras</li>
     </ul>
+  </div>
+
+  <section class="placar">
+    <h3 class="center">Placar</h3>
+      <table class="centered bordered">
+        <thead>
+          <tr>
+            <th>Usuário</th>
+            <th>Número de Palavras</th>
+            <th>Remover</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Usúario Exemplo</td>
+            <td>99</td>
+            <td>
+              <a href="#">
+                <i class="small material-icons">delete</i>
+              </a>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+  </section>
 
     <script src="js/jquery.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/placar.js"></script>
 
 </body>
 </html>
