--- a/T3/JQuery/alura-typer/public/principal.html
+++ b/T3/JQuery/alura-typer/public/principal.html
@@ -12,6 +12,11 @@
     <h1 class="center">Alura Typer</h1>
     <p class="frase">Este texto possui oito belas e grandiosas palavras.</p>
 
+    <div class="center">
+      <img src="img/spinner.gif" alt="Spinner" id="spinner">
+      <p id="erro">Ocorreu um erro, por favor tente novamente.</p>
+    </div>
+
     <ul class="informacoes center">
         <li>
           <i class="small material-icons icones">description</i>
@@ -28,6 +33,20 @@
     <a id="botao-reiniciar" class="btn-floating btn-large waves-effect waves-light red">
       <i class="material-icons">restore</i>
     </a>
+
+    <a id="botao-placar" class="btn-floating btn-large waves-effect waves-light green">
+      <i class="material-icons">assignment</i>
+    </a>
+
+    <a id="botao-frase" class="btn-floating btn-large waves-effect waves-light blue">
+      <i class="material-icons">shuffle</i>
+    </a>
+
+    <a id="botao-frase-id" class="btn-floating btn-large waves-effect waves-light cyan">
+      <i class="material-icons">repeat_one</i>
+    </a>
+    
+    <input type="number" min="0" id="frase-id">
 
     <ul class="center">
       <li><span id="contador-caracteres">0</span> Caracteres</li>
@@ -46,15 +65,6 @@
           </tr>
         </thead>
         <tbody>
-          <tr>
-            <td>Usúario Exemplo</td>
-            <td>99</td>
-            <td>
-              <a href="#">
-                <i class="small material-icons">delete</i>
-              </a>
-            </td>
-          </tr>
         </tbody>
       </table>
   </section>
@@ -62,6 +72,8 @@
     <script src="js/jquery.js"></script>
     <script src="js/main.js"></script>
     <script src="js/placar.js"></script>
+    <script src="js/frase.js"></script>
+
 
 </body>
 </html>
