--- a/T3/Projeto Conclusao/gallows/gallows.html
+++ b/T3/Projeto Conclusao/gallows/gallows.html
@@ -16,16 +16,17 @@
 
         <!-- div com a classe sprite -->
         <div class="sprite"></div>
-        
         <ul class="lacunas text-center"></ul>
 
         <div class="text-center">
-        <input id="entrada" 
+        <input id="entrada"
             class="entrada"
-            placeholder="Palavra secreta" autofocus>
+            autofocus>
         </div>
     </div>
 
     <script src="js/jquery.min.js"></script>
+    <script src="js/sprite.js"></script>
+
 </body>
 </html>
