JavaScript - Projeto de Conclusão pt3

--- a/T3/Projeto Conclusao/gallows/gallows.html
+++ b/T3/Projeto Conclusao/gallows/gallows.html
@@ -13,20 +13,22 @@
         <h2 class="text-center">Jogo da forca</h2>
     </div>
     <div class="container">
-
-        <!-- div com a classe sprite -->
         <div class="sprite"></div>
         <ul class="lacunas text-center"></ul>
 
         <div class="text-center">
         <input id="entrada"
             class="entrada"
-            autofocus>
+            placeholder="Palavra secreta" autofocus>
         </div>
     </div>
 
     <script src="js/jquery.min.js"></script>
     <script src="js/sprite.js"></script>
-
+    <script src="js/jogo.js"></script>
+    <script src="js/controller.js"></script>
+    <script>
+    criaController(criaJogo(createSprite('.sprite'))).inicia();
+    </script>
 </body>
 </html>
